# estudo-dirigido-teste-de-software

./: CMakeLists.txt  README.md  main.cpp
domain/: ClassificadorTriangulo.h
exceptions/: TrianguloInvalidoException.h
interfaces/: ITestaTriangulo.h
tests/: TesteClassificadorTriangulo.h
utils/: TestaTriangulo.h  TiposDeTriangulo.h
